--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools" package="com.aldi.liboorean">
+          xmlns:tools="http://schemas.android.com/tools"
+          package="com.aldi.liboorean">
 
     <application
             android:allowBackup="true"
@@ -10,8 +11,11 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".SplashScreen"
-                  android:theme="@style/Splash">
+        <activity android:name=".SlideScreen">
+        </activity>
+        <activity
+                android:name=".SplashScreen"
+                android:theme="@style/Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
